Add canvas-confetti library for performant confetti animations
- Added package.json for canvas-confetti with version 1.9.4 and necessary scripts.
- Implemented src/confetti.js for confetti animation logic.
- Created package-lock.json to lock dependencies.
- Updated main package.json to include canvas-confetti as a dependency.